# llm-on-legacy-gpus

./: .gitignore  CMakeLists.txt  README.md
kernels/: kernels.cl
scripts/: build-caicos-opencl.ps1  build.ps1  make-opencl-import-lib.ps1
src/: dump_model.cpp  embedded_kernels.h  gguf_reader.h  inference.cpp  inference.h  main.cpp  model.cpp  model.h  opencl_backend.cpp  opencl_backend.h  test_opencl.cpp  tokenizer.cpp  tokenizer.h
